--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,14 @@ main {
     position: relative;
 }
 
+.game.game--end::after {
+    width: 100%;
+    height: 100%;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 .game.game--end-h1::before {
     content: "";
     position: absolute;
